# ypy-websocket

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  environment-dev.yml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: index.md  install.md
docs/reference/: ASGI_server.md  Channels_consumer.md  Django_Channels.md  Django_Channels_consumer.md  Room.md  Store.md  WebSocket.md  WebSocket_provider.md  WebSocket_server.md
docs/usage/: WebSocket_API.md  client.md  server.md
tests/: conftest.py  test_asgi.py  test_file_store.py  test_sqlite_store.py  test_ypy_yjs.py  test_ystore.py  yjs_client_0.js  yjs_client_1.js  yjs_client_2.js
y_websocket/: __init__.py  websocket_provider.py  websocket_server.py  ydoc.py  yutils.py
ypy_websocket/: __init__.py  asgi.py  asgi_server.py  awareness.py  channels_consumer.py  django_channels_consumer.py  websocket.py  websocket_provider.py  websocket_server.py  ydoc.py  yroom.py  ystore.py  yutils.py
ypy_websocket/django_channels/: __init__.py  django_channels_consumer.py  yjs_consumer.py  yroom_storage.py
ypy_websocket/stores/: __init__.py  base_store.py  file_store.py  sqlite_store.py  utils.py
