[metadata]
name = y_websocket
version = attr: y_websocket.__version__
description = Websocket Connector for Ypy
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/davidbrochart/y-websocket
platforms = Windows, Linux, Mac OS X
keywords = yjs websocket

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  websockets >=10.0
  y-py >=0.4.3

[options.extras_require]
test =
  mypy
  flake8
  black
  pytest
  pytest-asyncio

[flake8]
max-line-length = 100
