[metadata]
name = ypy_websocket
version = attr: ypy_websocket.__version__
description = WebSocket connector for Ypy
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/y-crdt/ypy-websocket
platforms = Windows, Linux, Mac OS X
keywords = yjs websocket

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  y-py >=0.5.3,<0.6.0
  aiofiles >=0.8.0,<1
  aiosqlite >=0.17.0,<1

[options.extras_require]
test =
  pre-commit
  mypy
  pytest
  pytest-asyncio
  websockets >=10.0

[flake8]
max-line-length = 100
